THRIFT-734. java: Can't use primitive types in service definitions for bean generated code

git-svn-id: https://svn.apache.org/repos/asf/incubator/thrift/trunk@923566 13f79535-47bb-0310-9956-ffa450edef68